--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "http-errors": "~1.6.2",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "onoff": "^4.1.1",
+    "pug": "2.0.0-beta11",
+    "word-clock": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
