--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "async": "^3.0.1",
-    "axios": "^0.18.1",
+    "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "easybotics-rpi-rgb-led-matrix": "^0.3.0",
@@ -21,16 +21,9 @@
     "morgan": "~1.9.0",
     "onoff": "^4.1.1",
     "pug": "2.0.0-beta11",
-    "word-clock": "^1.0.3",
-    "xml2js": "^0.4.19"
+    "word-clock": "^1.0.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
     "nodemon": "^1.19.1"
   }
 }
