--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "word-clock": "^1.0.3"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.1"
   }
 }
