--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "debug": "node --inspect-brk=192.168.1.50:9229 ./bin/www"
+    "debug": "node --inspect ./bin/www"
   },
   "dependencies": {
     "async": "^3.0.1",
