--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "onoff": "^4.1.1",
+    "promise-ftp": "^1.3.5",
     "pug": "2.0.0-beta11",
-    "word-clock": "^1.0.3"
+    "word-clock": "^1.0.3",
+    "xml2js": "^0.4.22"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
