--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "easybotics-rpi-rgb-led-matrix": "^0.3.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
@@ -19,6 +20,7 @@
     "mcp9808-temperature-sensor": "^1.0.8",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
+    "mqtt": "^4.2.1",
     "onoff": "^4.1.1",
     "promise-ftp": "^1.3.5",
     "pug": "2.0.0-beta11",
