add coin ticker for doge-usd

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": "^3.0.1",
     "axios": "^0.18.0",
+    "coin-ticker": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
